--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,7 @@ body {
     width: 100%;
     display: flex;
     box-sizing: border-box;
-    background: url('/images/Repeat.png');
+    background: url('images/Repeat.png');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -166,7 +166,7 @@ body {
     width: 90%;
     height: 85%;
     bottom: 0;
-    background: url('/images/counterstrike.jpg');
+    background: url('images/counterstrike.jpg');
     background-position: center;
     background-size: cover;
     border-radius: 5px;
@@ -591,7 +591,7 @@ body {
         width: 90%;
         height: 85%;
         bottom: 0;
-        background: url('/images/counterstrike.jpg');
+        background: url('images/counterstrike.jpg');
         background-position: center;
         background-size: cover;
         border-radius: 5px;
